[tool.poetry]
name = "collam"
version = "0.1.0"
description = "Future is llm colabing with power of programming"
authors = ["shubham"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pendulum = "^3.0.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "^8.0"
coverage = "^7.0"
